<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbtoac" />

            <Button
                android:id="@+id/button31"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbtsen" />

            <Button
                android:id="@+id/button32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbtcos" />

            <Button
                android:id="@+id/button41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbttan" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button26"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt7" />

            <Button
                android:id="@+id/button33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt8" />

            <Button
                android:id="@+id/button34"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt9" />

            <Button
                android:id="@+id/button42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtdiv" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button27"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt4" />

            <Button
                android:id="@+id/button35"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt5" />

            <Button
                android:id="@+id/button36"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt6" />

            <Button
                android:id="@+id/button43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbt1mul" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button28"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt1" />

            <Button
                android:id="@+id/button37"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sbt2" />

            <Button
                android:id="@+id/button38"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt3" />

            <Button
                android:id="@+id/button44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbt1sub" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button29"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbt0" />

            <Button
                android:id="@+id/button39"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbtp" />

            <Button
                android:id="@+id/button40"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sbtigu" />

            <Button
                android:id="@+id/button45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtsom" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>